force-app/main/default/objects/Schedule_Execution__c/fields/Base_Record__c.field-meta.xml
<CustomField>
    <fullName>Base_Record__c</fullName>
    <formula>IF( ISBLANK( Base_Record_Id__c ), &apos;&apos;, HYPERLINK(&apos;/&apos; + Base_Record_Id__c, &apos;View Base Record&apos;, &apos;_blank&apos;))</formula>
    <label>Base Record</label>
    <type>Text</type>
</CustomField>