force-app/main/default/objects/Schedule_Execution__c/fields/Base_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Base_Record_Id__c</fullName>
    <label>Base Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>