force-app/main/default/objects/Schedule_Execution__c/fields/Last_Log_Updates_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Log_Updates_At__c</fullName>
    <label>Last Log Updates At</label>
    <type>DateTime</type>
</CustomField>