force-app/main/default/objects/Schedule_Execution__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <label>Status Description</label>
    <type>TextArea</type>
</CustomField>